--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class = "cover">
     <!-- navigation menu -->
     <nav class="top-nav">
         <div class="logo">
@@ -39,7 +39,26 @@
         </div>
 
         <div class="my-image">
+            <div class="text-rel">
+                <h6>Currated playlist</h6>
+                <h3>R and B Hits <br>
+                </h3>
+                <h4>All mine, Lie again, Petty call me everyday,Out of time, No love, Bad habit,and so much more</h4>
+                <h5></h5>
+            </div>
+
+                <!-- <div class="text-rel-images">
+                    <div class="rel-images">
+                        <img src="./Assets/user-1.svg" alt="" class="first-mg">
+                        <img src="./Assets/user-2.svg" alt="" class="second-mg">
+                        <img src="./Assets/user-3.svg" alt="" class="third mg">
+                        <img src="./Assets/user-4.svg" alt="" class="fourth-mg">
+                        <img src="./Assets/user-5.svg" alt="" class="fifth-mg">
+                    </div>
+                    <img src="./Assets/heart.svg" alt="" class="profile-heart">
+                </div> -->
             <img src="./Assets/wave-ripple.svg" alt="" class="ripple">
+            <img src="./Assets/eric-esma.svg" alt="" class="cover-pic">
         </div>
         <div class="rev-sec">
             <div class="playlist">
@@ -49,7 +68,7 @@
                     <h4>sean swadder</h4>
                     <h5>2:34:35</h5>
                 </div>
-                <img src="./Assets/heart-3.svg" alt="" srcset="" class="heart">
+                <img src="./Assets/heart-2.svg" alt="" srcset="" class="heart">
                 
 
             </div>
@@ -60,7 +79,7 @@
                     <h4>Dj YK mule</h4>
                     <h5>1:02:42</h5>
                 </div>
-                <img src="./Assets/heart-3.svg" alt="" srcset="" class="heart">
+                <img src="./Assets/heart-2.svg" alt="" srcset="" class="heart">
             </div>
 
             <div class="playlist3">
@@ -70,7 +89,7 @@
                     <h4>obi Datti</h4>
                     <h5>2:01:25</h5>
                 </div>
-                <img src="./Assets/heart-3.svg" alt="" srcset="" class="heart">
+                <img src="./Assets/heart-2.svg" alt="" srcset="" class="heart">
             </div>
         </div>
     </section>
@@ -114,5 +133,7 @@
             </div>
           </div>
     </section>
+
+    <section class="play-me"></section>
 </body>
 </html>
